working director change

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,5 @@ Encoding: UTF-8
 LazyData: true
 Imports: Rcpp (>= 1.0.9), 
   RcppArmadillo (>= 0.11.2.0.0),
-  roptim (>= 0.1.5), 
-  doParallel (>= 1.0.17), 
-  foreach (>= 1.5.2), 
-  iterators (>= 1.0.14)
+  roptim (>= 0.1.5)
 LinkingTo: Rcpp, RcppArmadillo, roptim
